only running image builds on pushes to master

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,5 +38,6 @@ workflows:
         filters: &branches_only
             tags:
               ignore: /.*/
-            branches:
-              only: /.*/
+              branches:
+                only:
+                  - master
