--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 executors:
-  release:
+  node:
     working_directory: ~/microservices-demo
     docker:
       - image: circleci/node:10
@@ -9,7 +9,7 @@ executors:
 
 jobs:
   prerelease:
-    executors: release
+    executors: node
     steps:
       - checkout
       - setup_remote_docker:
@@ -38,7 +38,7 @@ jobs:
             for dir in $(git diff --dirstat=files,0 HEAD~1 src/ | sed -E 's/^[ 0-9.]+% //g'); do architect push -s $dir -t latest; done
 
   release:
-    executors: release
+    executors: node
     steps:
       - checkout
       - setup_remote_docker:
@@ -68,7 +68,7 @@ jobs:
 
 workflows:
   version: 2
-  prerelease:
+  prerelease-changed:
     jobs:
       - prerelease:
           filters:
@@ -77,7 +77,7 @@ workflows:
             branches:
               only:
                 - master
-  release:
+  release-all:
     jobs:
       - release:
           filters:
