--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,27 +15,21 @@ jobs:
       - setup_remote_docker:
           docker_layer_caching: false
       - run:
-          name: Install Architect CLI
+          name: Setup NPM bin path
           command: |
-            mkdir ~/.npm-global
-            npm config set prefix '~/.npm-global'
-            export PATH=~/.npm-global/bin:$PATH
-            source ~/.profile
-            npm install -g @architect-io/cli
-            architect --version
+            mkdir $HOME/.npm-global
+            npm config set prefix '$HOME/.npm-global'
+            echo 'export PATH=$HOME/.npm-global/bin:$PATH' >> $BASH_ENV
+            source $BASH_ENV
+      - run:
+          name: Install Architect CLI
+          command: npm install -g @architect-io/cli
       - run:
           name: Architect Login
-          command: |
-            export PATH=~/.npm-global/bin:$PATH
-            source ~/.profile
-            architect --version
-            architect login -u $ARCHITECT_USERNAME -p $ARCHITECT_PASSWORD
+          command: architect login -u $ARCHITECT_USERNAME -p $ARCHITECT_PASSWORD
       - run:
           name: Push changed services
-          command: |
-            export PATH=~/.npm-global/bin:$PATH
-            source ~/.profile
-            for dir in $(git diff --dirstat=files,0 HEAD~1 src/ | sed -E 's/^[ 0-9.]+% //g'); do architect push -s $dir -t latest; done
+          command: for dir in $(git diff --dirstat=files,0 HEAD~1 src/ | sed -E 's/^[ 0-9.]+% //g'); do architect push -s $dir -t latest; done
 
   release:
     executor: node
@@ -44,27 +38,21 @@ jobs:
       - setup_remote_docker:
           docker_layer_caching: false
       - run:
-          name: Install Architect CLI
+          name: Setup NPM bin path
           command: |
-            mkdir ~/.npm-global
-            npm config set prefix '~/.npm-global'
-            export PATH=~/.npm-global/bin:$PATH
-            source ~/.profile
-            npm install -g @architect-io/cli
-            architect --version
+            mkdir $HOME/.npm-global
+            npm config set prefix '$HOME/.npm-global'
+            echo 'export PATH=$HOME/.npm-global/bin:$PATH' >> $BASH_ENV
+            source $BASH_ENV
+      - run:
+          name: Install Architect CLI
+          command: npm install -g @architect-io/cli
       - run:
           name: Architect Login
-          command: |
-            export PATH=~/.npm-global/bin:$PATH
-            source ~/.profile
-            architect --version
-            architect login -u $ARCHITECT_USERNAME -p $ARCHITECT_PASSWORD
+          command: architect login -u $ARCHITECT_USERNAME -p $ARCHITECT_PASSWORD
       - run:
           name: Push changed services
-          command: |
-            export PATH=~/.npm-global/bin:$PATH
-            source ~/.profile
-            for dir in $(ls -d src/*); do architect push -s $dir -t $CIRCLE_TAG; done
+          command: for dir in $(ls -d src/*); do architect push -s $dir -t $CIRCLE_TAG; done
 
 workflows:
   version: 2
