--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ jobs:
             npm config set prefix '$HOME/.npm-global'
             echo 'export PATH=$HOME/.npm-global/bin:$PATH' >> $BASH_ENV
             source $BASH_ENV
+            echo $BASH_ENV
       - run:
           name: Install Architect CLI
           command: npm install -g @architect-io/cli
