--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,9 +17,10 @@ jobs:
       - run:
           name: Setup NPM bin path
           command: |
-            mkdir $HOME/.npm-global
-            npm config set prefix '$HOME/.npm-global'
-            echo 'export PATH=$HOME/.npm-global/bin:$PATH' >> $BASH_ENV
+            echo $HOME
+            mkdir ~/.npm-global
+            npm config set prefix '~/.npm-global'
+            echo 'export PATH=~/.npm-global/bin:$PATH' >> $BASH_ENV
             source $BASH_ENV
             echo $BASH_ENV
       - run:
