--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,17 +7,23 @@ executors:
       - image: circleci/node:10
         user: node
 
-jobs:
-  prerelease:
-    executor: node
+commands:
+  setup_cli:
+    description: Install the CLI and login
+    parameters:
+      api_host:
+        type: string
+        default: https://api.architect.io
+      registry_host:
+        type: string
+        default: registry.architect.io
+      app_host:
+        type: string
+        default: https://app.architect.io
     steps:
-      - checkout
-      - setup_remote_docker:
-          docker_layer_caching: false
       - run:
           name: Setup NPM bin path
           command: |
-            echo $HOME
             mkdir ~/.npm-global
             npm config set prefix '~/.npm-global'
             echo 'export PATH=~/.npm-global/bin:$PATH' >> $BASH_ENV
@@ -25,14 +31,34 @@ jobs:
             echo $BASH_ENV
       - run:
           name: Install Architect CLI
+          command: npm install -g @architect-io/cli
+      - run:
+          name: Configure environment
           command: |
-            npm install -g @architect-io/cli
-            which architect
+            architect config:set api_host << parameters.api_host >>
+            architect config:set app_host << parameters.app_host >>
+            architect config:set registry_host << parameters.registry_host >>
       - run:
           name: Architect Login
           command: architect login -u $ARCHITECT_USERNAME -p $ARCHITECT_PASSWORD
+
+jobs:
+  prerelease:
+    executor: node
+    steps:
+      - checkout
+      - setup_remote_docker:
+          docker_layer_caching: false
+      - setup_cli
       - run:
-          name: Push changed services
+          name: Push changed services to prod
+          command: for dir in $(git diff --dirstat=files,0 HEAD~1 src/ | sed -E 's/^[ 0-9.]+% //g'); do architect push -s $dir -t latest; done
+      - setup_cli:
+          api_host: https://api.dev.architect.io
+          app_host: https://app.dev.architect.io
+          registry_host: registry.dev.architect.io
+      - run:
+          name: Push changed services to dev
           command: for dir in $(git diff --dirstat=files,0 HEAD~1 src/ | sed -E 's/^[ 0-9.]+% //g'); do architect push -s $dir -t latest; done
 
   release:
@@ -41,21 +67,16 @@ jobs:
       - checkout
       - setup_remote_docker:
           docker_layer_caching: false
+      - setup_cli
       - run:
-          name: Setup NPM bin path
-          command: |
-            mkdir $HOME/.npm-global
-            npm config set prefix '$HOME/.npm-global'
-            echo 'export PATH=$HOME/.npm-global/bin:$PATH' >> $BASH_ENV
-            source $BASH_ENV
+          name: Push changed services to prod
+          command: for dir in $(ls -d src/*); do architect push -s $dir -t $CIRCLE_TAG; done
+      - setup_cli:
+          api_host: https://api.dev.architect.io
+          app_host: https://app.dev.architect.io
+          registry_host: registry.dev.architect.io
       - run:
-          name: Install Architect CLI
-          command: npm install -g @architect-io/cli
-      - run:
-          name: Architect Login
-          command: architect login -u $ARCHITECT_USERNAME -p $ARCHITECT_PASSWORD
-      - run:
-          name: Push changed services
+          name: Push changed services to dev
           command: for dir in $(ls -d src/*); do architect push -s $dir -t $CIRCLE_TAG; done
 
 workflows:
