--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ commands:
       - run:
           name: Setup NPM bin path
           command: |
-            mkdir ~/.npm-global
+            mkdir -p ~/.npm-global
             npm config set prefix '~/.npm-global'
             echo 'export PATH=~/.npm-global/bin:$PATH' >> $BASH_ENV
             source $BASH_ENV
