--- a/architect.yml
+++ b/architect.yml
@@ -12,6 +12,7 @@ services:
     interfaces:
       main: 8080
     environment:
+      PORT: ${ services.frontend.interfaces.main.port }
       PRODUCT_CATALOG_SERVICE_ADDR: ${ services.productcatalog.interfaces.main.host }:${ services.productcatalog.interfaces.main.port }
       CURRENCY_SERVICE_ADDR: ${ services.currency.interfaces.main.host }:${ services.currency.interfaces.main.port }
       CART_SERVICE_ADDR: ${ services.cart.interfaces.main.host }:${ services.cart.interfaces.main.port }
@@ -27,6 +28,8 @@ services:
     language: go
     interfaces:
       main: 8080
+    environment:
+      PORT: ${ services.productcatalog.interfaces.main.port }
 
   currency:
     build:
@@ -35,6 +38,8 @@ services:
     language: node
     interfaces:
       main: 8080
+    environment:
+      PORT: ${ services.currency.interfaces.main.port }
 
   cart:
     build:
@@ -44,6 +49,7 @@ services:
     interfaces:
       main: 8080
     environment:
+      PORT: ${ services.cart.interfaces.main.port }
       LISTEN_ADDR: 0.0.0.0
       REDIS_ADDR: ${ services.cart-db.interfaces.main.host }:${ services.cart-db.interfaces.main.port }
 
@@ -60,6 +66,7 @@ services:
     interfaces:
       main: 8080
     environment:
+      PORT: ${ services.recommendation.interfaces.main.port }
       ENABLE_PROFILER: 0
       PRODUCT_CATALOG_SERVICE_ADDR: ${ services.productcatalog.interfaces.main.host }:${ services.productcatalog.interfaces.main.port }
 
@@ -70,6 +77,8 @@ services:
     language: go
     interfaces:
       main: 8080
+    environment:
+      PORT: ${ services.shipping.interfaces.main.port }
 
   ad:
     build:
@@ -78,6 +87,8 @@ services:
     language: java
     interfaces:
       main: 8080
+    environment:
+      PORT: ${ services.ad.interfaces.main.port }
 
   checkout:
     build:
@@ -87,6 +98,7 @@ services:
     interfaces:
       main: 8080
     environment:
+      PORT: ${ services.checkout.interfaces.main.port }
       PRODUCT_CATALOG_SERVICE_ADDR: ${ services.productcatalog.interfaces.main.host }:${ services.productcatalog.interfaces.main.port }
       SHIPPING_SERVICE_ADDR: ${ services.shipping.interfaces.main.host }:${ services.shipping.interfaces.main.port }
       PAYMENT_SERVICE_ADDR: ${ services.payment.interfaces.main.host }:${ services.payment.interfaces.main.port }
@@ -101,6 +113,8 @@ services:
     language: python
     interfaces:
       main: 8080
+    environment:
+      PORT: ${ services.email.interfaces.main.port }
 
   payment:
     build:
@@ -109,3 +123,5 @@ services:
     language: node
     interfaces:
       main: 8080
+    environment:
+      PORT: ${ services.payment.interfaces.main.port }
