--- a/environment.yml
+++ b/environment.yml
@@ -2,4 +2,4 @@ interfaces:
   app: ${ components['examples/boutique'].interfaces.frontend.url }
 
 components:
-  examples/boutique: file:./architect.yml
+  examples/boutique: latest
