--- a/environment.local.yml
+++ b/environment.local.yml
@@ -1,5 +1,5 @@
 interfaces:
-  app: ${ components['examples/boutique'].interfaces.frontend.url }
+  app: ${{ components['examples/boutique'].interfaces.frontend.url }}
 
 components:
   examples/boutique: file:./architect.yml
