--- a/architect.yml
+++ b/architect.yml
@@ -1,4 +1,5 @@
 name: examples/boutique
+homepage: https://github.com/architect-team/microservices-demo
 
 dependencies:
   examples/boutique-cartservice: latest
