Fixed docker context for cart service

--- a/src/cartservice/architect.yml
+++ b/src/cartservice/architect.yml
@@ -14,7 +14,7 @@ services:
 
   cartservice:
     build:
-      context: ./
+      context: ./src/
     interfaces:
       main: &cart-port 7070
     environment:
