Triggering component change to test previews

--- a/src/adservice/architect.yml
+++ b/src/adservice/architect.yml
@@ -1,5 +1,7 @@
 name: boutique-shop/ads
 description: Advertisement service used as part of the boutique shop microservices demo
+keywords:
+  - change-trigger
 
 services:
   ad:
