wip on azure resource terraform

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@ pkg/
 .project
 .eclipse.buildship.core.prefs
 release/wi-kubernetes-manifests.yaml
+
+terraform/.terraform*
+terraform/defaults.tfvars
+terraform/tfplan
+terraform/terraform.tfstate
+terraform/terraform.tfstate.backup
