--- a/src/productcatalogservice/architect.yml
+++ b/src/productcatalogservice/architect.yml
@@ -6,7 +6,9 @@ services:
     build:
       context: ./
     interfaces:
-      main: 3550
+      main:
+        port: 3550
+        protocol: grpc
     environment:
       PORT: 3550
 
