--- a/src/checkoutservice/architect.yml
+++ b/src/checkoutservice/architect.yml
@@ -2,12 +2,12 @@ name: boutique-shop/checkout
 description: Checkout service used as part of the boutique shop microservices demo
 
 dependencies:
-  boutique-shop/product-catalog: v1
-  boutique-shop/shopping-cart: v1
-  boutique-shop/currency: v1
-  boutique-shop/email: v1
-  boutique-shop/payments: v1
-  boutique-shop/shipping: v1
+  boutique-shop/product-catalog: latest
+  boutique-shop/shopping-cart: latest
+  boutique-shop/currency: latest
+  boutique-shop/email: latest
+  boutique-shop/payments: latest
+  boutique-shop/shipping: latest
 
 services:
   checkout:
