wip on final flow testing

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ terraform/tfplan
 terraform/terraform.tfstate
 terraform/terraform.tfstate.backup
 values.yml
+terraform/architect-kubeconfig
+terraform/private_ssh_key
