Update interpolation to be cleaner than host:port

--- a/src/checkoutservice/architect.yml
+++ b/src/checkoutservice/architect.yml
@@ -17,12 +17,12 @@ services:
       main: 5050
     environment:
       PORT: 5050
-      PRODUCT_CATALOG_SERVICE_ADDR: ${{ dependencies['boutique-shop/product-catalog'].interfaces.api.host }}:${{ dependencies['boutique-shop/product-catalog'].interfaces.api.port }}
-      SHIPPING_SERVICE_ADDR: ${{ dependencies['boutique-shop/shipping'].interfaces.api.host }}:${{ dependencies['boutique-shop/shipping'].interfaces.api.port }}
-      PAYMENT_SERVICE_ADDR: ${{ dependencies['boutique-shop/payments'].interfaces.api.host }}:${{ dependencies['boutique-shop/payments'].interfaces.api.port }}
-      EMAIL_SERVICE_ADDR: ${{ dependencies['boutique-shop/email'].interfaces.api.host }}:${{ dependencies['boutique-shop/email'].interfaces.api.port }}
-      CURRENCY_SERVICE_ADDR: ${{ dependencies['boutique-shop/currency'].interfaces.api.host }}:${{ dependencies['boutique-shop/currency'].interfaces.api.port }}
-      CART_SERVICE_ADDR: ${{ dependencies['boutique-shop/shopping-cart'].interfaces.api.host }}:${{ dependencies['boutique-shop/shopping-cart'].interfaces.api.port }}
+      PRODUCT_CATALOG_SERVICE_ADDR: ${{ dependencies['boutique-shop/product-catalog'].interfaces.api.url }}
+      SHIPPING_SERVICE_ADDR: ${{ dependencies['boutique-shop/shipping'].interfaces.api.url }}
+      PAYMENT_SERVICE_ADDR: ${{ dependencies['boutique-shop/payments'].interfaces.api.url }}
+      EMAIL_SERVICE_ADDR: ${{ dependencies['boutique-shop/email'].interfaces.api.url }}
+      CURRENCY_SERVICE_ADDR: ${{ dependencies['boutique-shop/currency'].interfaces.api.url }}
+      CART_SERVICE_ADDR: ${{ dependencies['boutique-shop/shopping-cart'].interfaces.api.url }}
 
 interfaces:
   api:
