--- a/src/currencyservice/architect.yml
+++ b/src/currencyservice/architect.yml
@@ -11,6 +11,9 @@ services:
         protocol: grpc
     environment:
       PORT: 7000
+      ${{ if architect.environment == 'local' }}: # https://github.com/GoogleCloudPlatform/microservices-demo/issues/647
+        DISABLE_PROFILER: true
+        DISABLE_TRACING: true
 
 interfaces:
   api:
