--- a/src/cartservice/architect.yml
+++ b/src/cartservice/architect.yml
@@ -1,4 +1,4 @@
-name: boutique-shop/shopping-cart
+name: shopping-cart
 description: Shopping cart service powering the Boutique Shop example
 keywords:
   - gcp
