--- a/src/checkoutservice/architect.yml
+++ b/src/checkoutservice/architect.yml
@@ -1,13 +1,13 @@
-name: boutique-shop/checkout
+name: checkout
 description: Checkout service used as part of the boutique shop microservices demo
 
 dependencies:
-  boutique-shop/product-catalog: v1
-  boutique-shop/shopping-cart: v1
-  boutique-shop/currency: v1
-  boutique-shop/email: v1
-  boutique-shop/payments: v1
-  boutique-shop/shipping: v1
+  product-catalog: v1
+  shopping-cart: v1
+  currency: v1
+  email: v1
+  payments: v1
+  shipping: v1
 
 services:
   checkout:
@@ -19,12 +19,12 @@ services:
         protocol: grpc
     environment:
       PORT: 5050
-      PRODUCT_CATALOG_SERVICE_ADDR: ${{ dependencies['boutique-shop/product-catalog'].interfaces.api.url }}
-      SHIPPING_SERVICE_ADDR: ${{ dependencies['boutique-shop/shipping'].interfaces.api.url }}
-      PAYMENT_SERVICE_ADDR: ${{ dependencies['boutique-shop/payments'].interfaces.api.url }}
-      EMAIL_SERVICE_ADDR: ${{ dependencies['boutique-shop/email'].interfaces.api.url }}
-      CURRENCY_SERVICE_ADDR: ${{ dependencies['boutique-shop/currency'].interfaces.api.url }}
-      CART_SERVICE_ADDR: ${{ dependencies['boutique-shop/shopping-cart'].interfaces.api.url }}
+      PRODUCT_CATALOG_SERVICE_ADDR: ${{ dependencies['product-catalog'].interfaces.api.url }}
+      SHIPPING_SERVICE_ADDR: ${{ dependencies['shipping'].interfaces.api.url }}
+      PAYMENT_SERVICE_ADDR: ${{ dependencies['payments'].interfaces.api.url }}
+      EMAIL_SERVICE_ADDR: ${{ dependencies['email'].interfaces.api.url }}
+      CURRENCY_SERVICE_ADDR: ${{ dependencies['currency'].interfaces.api.url }}
+      CART_SERVICE_ADDR: ${{ dependencies['shopping-cart'].interfaces.api.url }}
 
 interfaces:
   api:
