--- a/src/frontend/architect.yml
+++ b/src/frontend/architect.yml
@@ -1,14 +1,14 @@
-name: boutique-shop/frontend
+name: frontend
 description: Web application serving the boutique shop microservices demo
 
 dependencies:
-  boutique-shop/product-catalog: v1
-  boutique-shop/currency: v1
-  boutique-shop/shopping-cart: v1
-  boutique-shop/recommendations: v1
-  boutique-shop/shipping: v1
-  boutique-shop/ads: v1
-  boutique-shop/checkout: v1
+  product-catalog: v1
+  currency: v1
+  shopping-cart: v1
+  recommendations: v1
+  shipping: v1
+  ads: v1
+  checkout: v1
 
 services:
   frontend:
@@ -18,13 +18,13 @@ services:
       main: 8080
     environment:
       PORT: 8080
-      PRODUCT_CATALOG_SERVICE_ADDR: ${{ dependencies['boutique-shop/product-catalog'].interfaces.api.url }}
-      CURRENCY_SERVICE_ADDR: ${{ dependencies['boutique-shop/currency'].interfaces.api.url }}
-      CART_SERVICE_ADDR: ${{ dependencies['boutique-shop/shopping-cart'].interfaces.api.url }}
-      RECOMMENDATION_SERVICE_ADDR: ${{ dependencies['boutique-shop/recommendations'].interfaces.api.url }}
-      SHIPPING_SERVICE_ADDR: ${{ dependencies['boutique-shop/shipping'].interfaces.api.url }}
-      AD_SERVICE_ADDR: ${{ dependencies['boutique-shop/ads'].interfaces.api.url }}
-      CHECKOUT_SERVICE_ADDR: ${{ dependencies['boutique-shop/checkout'].interfaces.api.url }}
+      PRODUCT_CATALOG_SERVICE_ADDR: ${{ dependencies['product-catalog'].interfaces.api.url }}
+      CURRENCY_SERVICE_ADDR: ${{ dependencies['currency'].interfaces.api.url }}
+      CART_SERVICE_ADDR: ${{ dependencies['shopping-cart'].interfaces.api.url }}
+      RECOMMENDATION_SERVICE_ADDR: ${{ dependencies['recommendations'].interfaces.api.url }}
+      SHIPPING_SERVICE_ADDR: ${{ dependencies['shipping'].interfaces.api.url }}
+      AD_SERVICE_ADDR: ${{ dependencies['ads'].interfaces.api.url }}
+      CHECKOUT_SERVICE_ADDR: ${{ dependencies['checkout'].interfaces.api.url }}
 
 interfaces:
   frontend:
