--- a/src/shippingservice/architect.yml
+++ b/src/shippingservice/architect.yml
@@ -1,4 +1,4 @@
-name: boutique-shop/shipping
+name: shipping
 description: Shipping service used as part of the boutique shop microservices demo
 
 services:
